# pastel

./: Cargo.toml  LICENSE  README  README.md
res/: pasteltheme.css
src/: addons.rs  canvas.rs  color_swatch.rs  control_knob.rs  dialogs.rs  main.rs  marquee.rs  palette.rs  progress_bar.rs  theme.rs  toolbar.rs  tools.rs
