[package]
name = "pastel"
description = "Simple bitmap editor for Redox OS"
repository = "https://github.com/pastel.git"
version = "0.1.1"
keywords = ["orbital", "redox", "editor", "graphics"]
authors = ["Robby <robbycerantola@gmail.com>"]


[dependencies]
orbclient = "0.3.13"
orbtk = { git = "https://github.com/robbycerantola/orbtk.git", branch = "mode" }
orbimage = "0.1.16"
image = "0.12.4"
rusttype = "0.2.3"


[features]
default = []
debug = []
multicore = []

[profile.release]
panic = "abort"

[patch.crates-io]
#orbclient = { path = "/home/robby/orbclient" }
jpeg-decoder = { git = "https://github.com/robbycerantola/jpeg-decoder.git", default-features = false }
orbclient = { git = "https://github.com/robbycerantola/orbclient.git" }

