[package]
name = "pastel"
description = "Simple bitmap editor for Redox OS"
repository = "https://github.com/pastel.git"
version = "0.1.2"
keywords = ["orbital", "redox", "editor", "graphics"]
authors = ["Robby <robbycerantola@gmail.com>"]
edition = "2018"


[dependencies]
orbclient = "0.3.21"
orbtk = { git = "https://github.com/robbycerantola/orbtk.git", branch = "mode" }
orbimage = "0.1.17"
image = "0.21.1"
rusttype = "0.2.3"
dirs = "1.0"


[features]
default = []
debug = []
multicore = []

[profile.release]
panic = "abort"

[patch.crates-io]
#orbclient = { path = "/home/robby/orbclient" }
#jpeg-decoder = { git = "https://github.com/robbycerantola/jpeg-decoder.git", default-features = false }
#orbclient = { git = "https://github.com/robbycerantola/orbclient.git" }

